# claims-deduplicator

./: .gitignore  LICENSE  README.md  clusters_analysis.json  environment.yml  example_deduplication.py  main.py  pyproject.toml  rose_datasets_small.json
claim_deduplicator/: __init__.py  amr.py  cli.py  deduplicator.py  embeddings.py  file_pipeline.py  json_handler.py  multi_threshold_deduplicate.py  nn_clustering.py  paths.py  pick_representatives.py  redundancy.py  scoring.py
claims_cleaner/: __init__.py  cli.py  clustering.py  deduplicate.py  embeddings.py  json_handler.py  scoring.py  strategies.py
claims_cleaner/cache/: embedding_cache_all_MiniLM.pkl
data/: clusters_analysis.json  example_dataset.json  example_dataset_deduped.json  rose_datasets_small.json  rose_datasets_small_deduped.json
